# advent-of-code-2023

day1/: Cargo.toml
day1/src/: day1_part1.rs  day1_part2.rs  trebuchet_calibration.rs
day2/: Cargo.toml
day2/src/: cube_game.rs  day2_part1.rs  day2_part2.rs
day3/: Cargo.toml  analysis.md
day3/src/: day3_part1.rs  day3_part2.rs  gondola_lift_engine.rs
day4/: Cargo.toml  analysis.md
day4/input/: part1
day4/src/: day4_part1.rs  day4_part2.rs  scratch_cards.rs
day5/: Cargo.toml  journal.md
day5/src/: almanac.rs  day5_part2.rs
