[package]
name = "day5"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day5_part1"
path = "src/day5_part1.rs"

[[bin]]
name = "day5_part2"
path = "src/day5_part2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
surrealdb = { version = "1.0.0", features = ["kv-mem"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
